log/build_2024-04-22_19-29-42/uav_urdf_demo/stderr.log
/home/ccl/ROS2_UAV/uav_urdf_demo/src/state_publisher.cpp: In member function ‘void StatePublisher::cmd_callback(std::shared_ptr<std_msgs::msg::Int16_<std::allocator<void> > >)’:
/home/ccl/ROS2_UAV/uav_urdf_demo/src/state_publisher.cpp:90:29: error: expected ‘;’ before ‘do’
   90 |             yaw = -1 * angle
      |                             ^
      |                             ;
make[2]: *** [CMakeFiles/state_publisher.dir/build.make:63: CMakeFiles/state_publisher.dir/src/state_publisher.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/state_publisher.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
